--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- NAVBAR -->
-    <section id="navbar" class="fixed top-0 left-0 right-0 z-40 bg-white text-black shadow-xl py-8 px-2">
+    <section id="navbar" class="md:fixed top-0 left-0 right-0 z-40 bg-white text-black shadow-xl py-8 px-2">
         <nav class="container mx-auto flex flex-col md:flex-row items-center justify-between">
             <!-- LOGO -->
             <div class=" md:flex space-x-20 items-center mx-auto md:mx-0">
